--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "homepage": "https://github.com/Peregrine42/scene-graph#readme",
   "devDependencies": {
+    "express": "^4.13.3",
     "jasmine-core": "^2.3.4",
     "jasmine-node": "^1.14.5",
     "karma": "^0.13.10",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.18",
-    "should": "^7.1.0",
     "supertest": "^1.1.0"
   }
 }
