--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
   "homepage": "https://github.com/Peregrine42/scene-graph#readme",
   "devDependencies": {
     "express": "^4.13.3",
-    "jasmine-core": "^2.3.4",
-    "jasmine-node": "^1.14.5",
     "karma": "^0.13.10",
-    "karma-jasmine": "^0.3.6",
+    "karma-mocha": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.1",
+    "mocha": "^2.3.3",
     "phantomjs": "^1.9.18",
     "supertest": "^1.1.0"
   }
