--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   "devDependencies": {
     "express": "^4.13.3",
     "karma": "^0.13.10",
+    "karma-browserify": "^4.4.0",
     "karma-mocha": "^0.2.0",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs2-launcher": "^0.3.2",
     "mocha": "^2.3.3",
-    "phantomjs": "^1.9.18",
+    "phantomjs2": "^2.0.0",
+    "sinon": "^1.17.1",
     "supertest": "^1.1.0"
+  },
+  "dependencies": {
+    "express": "^4.13.3"
   }
 }
