beginning wait_for

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Peregrine42/scene-graph#readme",
   "devDependencies": {
+    "expect.js": "^0.3.1",
     "express": "^4.13.3",
     "karma": "^0.13.10",
     "karma-browserify": "^4.4.0",
