--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "karma-browserify": "^4.4.0",
     "karma-mocha": "^0.2.0",
     "karma-phantomjs2-launcher": "^0.3.2",
+    "mithril": "^0.2.0",
     "mocha": "^2.3.3",
     "phantomjs2": "^2.0.0",
+    "radio": "^0.2.0",
     "sinon": "^1.17.1",
     "supertest": "^1.1.0"
   },
