--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Peregrine42/scene-graph#readme",
   "devDependencies": {
+    "axios": "^0.7.0",
     "babelify": "^6.3.0",
     "expect.js": "^0.3.1",
     "express": "^4.13.3",
@@ -34,5 +35,14 @@
   "dependencies": {
     "express": "^4.13.3"
   },
-  "transform": [["babelify", { "blacklist": ["regenerator"] }]]
+  "transform": [
+    [
+      "babelify",
+      {
+        "blacklist": [
+          "regenerator"
+        ]
+      }
+    ]
+  ]
 }
